===== 0.6.7 (??????, 2010) =====

* Catalog's loading resumption nearly from position when "back" key has been pressed
* Hyphenation for words containing '-' symbol has been fixed
* New "Custom catalogs" feature: user can manually add OPDS catalogs to the network library
* Vietnamese interface translation (by Phạm Văn Hùng_Firestork) has been added
* Italian interface translation (by Vytek and Neoxx from AndDev.it Translate Team) has been added
* Synchronizing EPD and LCD displays on "Synchronize" button click

===== 0.6.6 (May 20, 2010) =====

* FBReader doesn't require to press the screen off button twice
* FBReader doesn't go to the background after changing status bar option
* FBReader keeps rotation after switching screen off and back

===== 0.6.5 (May 14, 2010) =====

* Network library view has been completely changed: each subcatalog opens in new window
* "Network search" item has been added to the Network Library
* "My Books" item never becomes hidden; Authentication dialog is showed if needed
* Options menu has been added to Network Catalogs
* Books directory is now configurable
* Manybooks catalog has been added
* A processing of ePub internal hyperlinks with "/../" in the path has been fixed
* German interface translation (by Victor Massini) has been added

===== 0.6.4 (May 1, 2010) =====

* Zip decompressing has been fixed

===== 0.6.3 (Apr 30, 2010) =====

* A problem with some zip-archives has been fixed
* Searching for books in network catalogs has been implemented
* Stopping catalogs loading from context menu
* Users registration in Litres network catalog

===== 0.6.2 (Apr 26, 2010) =====

* Downloader service priority has been decreased for better UI responsivity
* New menu items: Rotate Screen, Zoom In, Zoom Out
* A problem with %-escaped file names inside ePubs has been fixed
* Small fixes in "Old" Preferences Dialog (by Robert Stockton)

===== 0.6.1 (Apr 23, 2010) =====

* User can preview a book before downloading/purchasing