@@ -1,5 +1,7 @@
 ===== 0.6.7 (??????, 2010) =====
 
+* New icon that indicates a status of a book (Paid book / Book can be downloaded / Downloaded book)
+  in the Network Library
 * Catalog's loading resumption nearly from position when "back" key has been pressed
 * Hyphenation for words containing '-' symbol has been fixed
 * New "Custom catalogs" feature: user can manually add OPDS catalogs to the network library
